# GeometricalPercolation

./: CMakeLists.txt  README.md  analyze_clusters_files.py  calculate_youngs_moduli.py  create_clusters_files.py  create_db_file.py  create_meshes.py  create_systems_set.py  db_analysis.py  db_creation_after_main.py  exfoliated_interface_percolation_polygons.cpp  get_cluster_lengths.py  intersections_to_clusters.py  main.py  plot.gnu  reparser.py  runner_of_all.py  summary.py
include/: csg_printer_circles.hpp  csg_printer_polygons.hpp  det.hpp  settings_parser.hpp
include/geometries/: line_segment.hpp  plane.hpp  point.hpp  polygon.hpp  polygonal_cylinder.hpp  vector.hpp
include/ng_errors_checkers/: checker_parallel_surfaces.hpp
include/percolation/: percolation_checker.hpp
spheres_tests/: create_bins.py  create_meshes.py  create_systems.py  create_systems_pss.py  dilute_fis.py  moduli.py  readme_spheres_tests
src/: csg_printer_circles.cpp  csg_printer_polygons.cpp  det.cpp  settings_parser.cpp
src/geometries/: line_segment.cpp  plane.cpp  point.cpp  polygon.cpp  polygonal_cylinder.cpp  vector.cpp
src/ng_errors_checkers/: checker_parallel_surfaces.cpp
src/percolation/: percolation_checker.cpp
